@@ -1,3 +1,9 @@
+2004-05-19 Ian Rutt
+ * Fixed problem with array sizes in glimmer.f90. Here, the size of
+	temporary arrays was based on the size of optional arguments,
+	which isn't allowed. Replaced them will allocatable arrays.
+ * Fixed problem with build system - added glimmer_global_grid.f90
+
 2004-05-17 Ian Rutt
  * Added copy_global_grid subroutine to glimmer_global_grid.f90
  * Added capability to specify grid-box boundaries when initialising model,
